--- a/front/src/app/component/order/order.component.html
+++ b/front/src/app/component/order/order.component.html
@@ -45,7 +45,7 @@
                         <div class="col-md-2"> <label>Pays</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country" (change)="getStates('shippingAddress')">
+                                <select formControlName="country">
                                     <option *ngFor="let country of countries" [ngValue]="country">
                                         {{ country.name }}
                                     </option>
@@ -100,7 +100,7 @@
                         <div class="col-md-2"> <label>Pays</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country" (change)="getStates('billingAddress')">
+                                <select formControlName="country">
                                     <option *ngFor="let country of countries" [ngValue]="country">
                                         {{ country.name }}
                                     </option>
