--- a/front/src/app/component/products/products.component.html
+++ b/front/src/app/component/products/products.component.html
@@ -36,7 +36,7 @@
 
     <div class="col-md-4" *ngFor="let product of products">
 
-      <div class="card mb-4" routerLink="/product/{{product.id}}" routerLinkActive="active">
+      <div class="card mb-4" routerLinkActive="active">
 
         <img src="/assets/img/sac.jpg" class="card-img-top" alt="Produit 1">
 
@@ -109,7 +109,7 @@
 
     <div class="col-md-4" *ngFor="let product of products">
 
-      <div class="card mb-4" routerLink="/product/{{product.id}}" routerLinkActive="active">
+      <div class="card mb-4" routerLinkActive="active">
 
         <img src="/assets/img/sac.jpg" class="card-img-top" alt="Produit 1">
 
@@ -178,7 +178,7 @@
     
         <div class="col-md-4" *ngFor="let product of products">
     
-          <div class="card mb-4" routerLink="/product/{{product.id}}" routerLinkActive="active">
+          <div class="card mb-4" routerLinkActive="active">
     
             <img src="/assets/img/sac.jpg" class="card-img-top" alt="Produit 1">
     
