--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -26,7 +26,7 @@
 
             <li class="nav-item">
 
-              <a class="nav-link active" aria-current="page" href="#" routerLink="/products">Home</a>
+              <a class="nav-link active" aria-current="page" href="#" routerLink="#">Home</a>
 
             </li>
 
@@ -52,7 +52,7 @@
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/contact">Contact</a>
 
             </li>
 
