--- a/front/src/app/component/products/products.component.html
+++ b/front/src/app/component/products/products.component.html
@@ -38,7 +38,7 @@
 
       <div class="card mb-4" routerLinkActive="active">
 
-        <img src="/assets/img/sac.jpg" class="card-img-top" alt="Produit 1">
+        <img [src]= "product.img"  class="card-img-top" alt="{{ product.img }}">
 
         <div class="card-body">
 
